--- a/edgelet/support-bundle/Cargo.toml
+++ b/edgelet/support-bundle/Cargo.toml
@@ -5,42 +5,13 @@ authors = ["Lee Fitchett <lefitche@microsoft.com>"]
 edition = "2018"
 
 [dependencies]
-atty = "0.2"
-bytes = "0.4"
-chrono = { version = "0.4.7", features = ["serde"] }
-chrono-humanize = "0.0.11"
-clap = "2.31"
+chrono = "0.4.7"
 failure = "0.1"
 futures = "0.1"
-hyper = "0.12"
-lazy_static = "1"
-native-tls = "0.2"
-openssl = "0.10"
-regex = "0.2"
-serde = "1.0"
-serde_derive = "1.0"
-serde_json = "1.0"
-tabwriter = "1.0"
-termcolor = "0.3"
 tokio = "0.1"
-url = "1.7"
 zip = "0.5.3"
 
-docker = { path = "../docker-rs" }
 edgelet-core = { path = "../edgelet-core" }
-edgelet-docker = { path = "../edgelet-docker" }
-edgelet-http = { path = "../edgelet-http" }
-edgelet-http-mgmt = { path = "../edgelet-http-mgmt" }
-management = { path = "../management" }
-mini-sntp = { path = "../mini-sntp" }
-
-[target.'cfg(unix)'.dependencies]
-byte-unit = "3.0.3"
-libc = "0.2"
-sysinfo = "0.9.6"
-
-[target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["ntdef", "ntstatus", "winnt", "winsock2"] }
 
 [dev-dependencies]
 edgelet-test-utils = { path = "../edgelet-test-utils" }
