--- a/builds/e2e/templates/e2e-run.yaml
+++ b/builds/e2e/templates/e2e-run.yaml
@@ -54,7 +54,14 @@ steps:
     # aren't included in the TRX. Copy them manually here.
     Copy-Item "$(binDir)/*-test-*.log" "$logDir/"
     Copy-Item "$(binDir)/*-device-*.log" "$logDir/"
-    Copy-Item "$(binDir)/testoutput.log" "$logDir/$(binDir)/testoutput-$(Agent.Name).log"
+    if ('$(Agent.Name)'.Contains('centos'))
+      {
+        Copy-Item "$(binDir)/testoutput.log" "$logDir/testoutput-centos.log"
+      }
+      else
+      {
+        Copy-Item "$(binDir)/testoutput.log" "$logDir/testoutput.log"
+      }
   displayName: Collect Logs
   condition: succeededOrFailed()
 
