--- a/mqtt/mqtt-edgehub/Cargo.toml
+++ b/mqtt/mqtt-edgehub/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Azure IoT Edge Devs"]
 edition = "2018"
 
 [dependencies]
+assert_matches = "1.3.0"
 async-trait = "0.1"
 backoff = { version = "0.2", features = ["tokio"] }
 bytes = "0.5"
@@ -33,6 +34,7 @@ mockito = "0.25"
 proptest = "0.9"
 test-case = "1.0"
 tokio = { version = "0.2", features = ["macros"] }
+anyhow = "1.0"
 
 mqtt-broker-tests-util = { path = "../mqtt-broker-tests-util" }
 
